onpolicy/scripts/results/SwarmEnv/rmappo/small/wandb/run-20240805_201733-hj6x3unj/files/output.log
Traceback (most recent call last):
  File "D:\youssef\on-policy\onpolicy\scripts\train\train_swarm.py", line 178, in <module>
    main(sys.argv[1:])
  File "D:\youssef\on-policy\onpolicy\scripts\train\train_swarm.py", line 159, in main
    from onpolicy.runner.shared.swarm_runner import SwarmRunner as Runner
  File "d:\youssef\on-policy\onpolicy\runner\shared\swarm_runner.py", line 14
    self.warmup()
       ^
IndentationError: expected an indented block